--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2",
     "vite": "^7.0.2"
   },
   "engines": {
