--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "lint:fix": "npx eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix",
     "lint-safe": "npx eslint \"src/**/*.{ts,tsx,js,jsx}\" --config .eslintrc.safe-autofix.cjs --fix --fix-type problem --fix-type layout",
     "format": "npx prettier \"src/**/*.{ts,tsx,js,jsx}\" --write",
-    "verify": "npx tsc --noEmit"
+    "verify": "npx tsc --noEmit",
+    "smoke": "node scripts/smoke/smoke-test.js",
+    "smoke:headful": "HEADFUL=true node scripts/smoke/smoke-test.js",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watch",
+    "test": "npm run verify && npm run test:unit && npm run smoke"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.80.7",
@@ -33,9 +38,11 @@
     "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
     "@babel/register": "^7.27.1",
+    "@playwright/test": "^1.54.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.2.0",
     "@types/prop-types": "^15.7.15",
     "@types/react": "^19.1.9",
@@ -47,9 +54,13 @@
     "eslint": "^9.31.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.0.5",
+    "playwright": "^1.54.2",
     "postcss": "^8.5.5",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.7.2",
     "vite": "^7.0.2"
   },
