--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["react", "node"]
+    "types": ["react", "node", "jest"]
   },
   "include": ["src"]
 }
