--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "vite",
+    "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "build": "vite build",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint .",
+    "test": "jest",
+    "test:ui": "jest --watch",
+    "e2e": "playwright test",
     "process-modules": "node scripts/process-modules.cjs",
     "add-headers": "node scripts/add-headers.cjs",
-    "lint": "npx eslint \"src/**/*.{ts,tsx,js,jsx}\"",
     "lint:fix": "npx eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix",
     "lint-safe": "npx eslint \"src/**/*.{ts,tsx,js,jsx}\" --config .eslintrc.safe-autofix.cjs --fix --fix-type problem --fix-type layout",
     "format": "npx prettier \"src/**/*.{ts,tsx,js,jsx}\" --write",
@@ -18,8 +22,7 @@
     "smoke": "node scripts/smoke/smoke-test.js",
     "smoke:headful": "HEADFUL=true node scripts/smoke/smoke-test.js",
     "test:unit": "jest",
-    "test:unit:watch": "jest --watch",
-    "test": "npm run verify && npm run test:unit && npm run smoke"
+    "test:unit:watch": "jest --watch"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.80.7",
@@ -38,6 +41,7 @@
     "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
     "@babel/register": "^7.27.1",
+    "@hebcal/core": "^5.10.1",
     "@playwright/test": "^1.54.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
@@ -51,16 +55,20 @@
     "@typescript-eslint/parser": "^8.37.0",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
+    "date-fns": "^4.1.0",
     "eslint": "^9.31.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "hijri-date": "^0.2.2",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
     "playwright": "^1.54.2",
     "postcss": "^8.5.5",
     "prettier": "^3.6.2",
+    "solarlunar": "^2.0.7",
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "vite": "^7.0.2"
   },
