Add Vercel Speed Insights and Analytics
PERFORMANCE MONITORING ENHANCEMENT:
- Installed @vercel/speed-insights for real-world performance tracking
- Installed @vercel/analytics for comprehensive user analytics
- Integrated both packages into main.tsx for automatic data collection
- Build tested and confirmed working (198.83 kB index bundle)

Benefits:
✅ Real-world Core Web Vitals monitoring
✅ User behavior analytics and insights
✅ Performance regression detection
✅ Geographic performance analysis
✅ Page load time tracking across devices

This will provide valuable data about how the game performs for actual users across different devices, networks, and locations, complementing our existing performance monitoring system.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.80.7",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "ajv": "^8.17.1",
     "framer-motion": "^12.10.0",
     "lucide-react": "^0.507.0",
