--- a/package.json
+++ b/package.json
@@ -28,55 +28,56 @@
     "deploy:preview": "npm run build && vercel"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.80.7",
+    "@tanstack/react-query": "^5.84.2",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "ajv": "^8.17.1",
-    "framer-motion": "^12.10.0",
-    "lucide-react": "^0.507.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.539.0",
     "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "uuid": "^11.1.0",
     "valtio": "^2.1.5",
-    "zod": "^3.25.64",
-    "zustand": "^5.0.5"
+    "zod": "^4.0.17",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.4",
-    "@babel/preset-env": "^7.27.2",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
     "@babel/register": "^7.27.1",
     "@hebcal/core": "^5.10.1",
     "@playwright/test": "^1.54.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.2.0",
+    "@types/node": "^24.2.1",
     "@types/prop-types": "^15.7.15",
     "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.6",
-    "@typescript-eslint/eslint-plugin": "^8.37.0",
-    "@typescript-eslint/parser": "^8.37.0",
-    "@vitejs/plugin-react": "^4.6.0",
+    "@types/react-dom": "^19.1.7",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "date-fns": "^4.1.0",
-    "eslint": "^9.31.0",
+    "eslint": "^9.33.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "hijri-date": "^0.2.2",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.0.5",
     "playwright": "^1.54.2",
-    "postcss": "^8.5.5",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "solarlunar": "^2.0.7",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.11",
     "terser": "^5.43.1",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2",
-    "vite": "^7.0.2"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.1"
   },
   "engines": {
     "node": "20.x"
