--- a/package.json
+++ b/package.json
@@ -79,6 +79,11 @@
     "typescript": "^5.9.2",
     "vite": "^7.1.1"
   },
+  "overrides": {
+    "glob": "^10.4.5",
+    "inflight": "npm:@isaacs/inflight@^1.0.0",
+    "test-exclude": "^7.0.1"
+  },
   "engines": {
     "node": "20.x"
   },
