feat: Add automatic NPC modal popup system
- Add automatic triggering of NPC selection modal when NPCs detected in room
- Support both single NPC (direct console) and multiple NPCs (selection modal)
- Include 1.5s delay to avoid conflicts with room transitions
- Enable automatic conversations with Morthos and Al when present
- Fix celebration loading with bundled JSON data
- Update Vercel deployment configuration

--- a/vercel.json
+++ b/vercel.json
@@ -47,7 +47,7 @@
   ],
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!data|assets|audio|images|sounds|style\\.css|favicon\\.ico).*)",
       "destination": "/index.html"
     }
   ]
