feat: Complete Inter-NPC Conversations System
🤖 Major Feature: Enable NPCs to talk to each other

Core Components:
- Conversation Bus: Orchestrates NPC-to-NPC dialogue
- Voice Styling: Personality-based dialogue generation
- Memory System: Tracks conversation history
- Trigger System: Automatic conversation initiation
- Public API: Easy-to-use conversation functions

Key Features:
✅ Ayla can address any NPC directly (cross-room capability)
✅ Morthos and Al can talk to each other and to Ayla
✅ Co-location rules (Morthos↔Al need same room, Ayla bypasses)
✅ Cooldown system (60-90s between conversations)
✅ Player visibility toggle (overhear NPC banter setting)
✅ Never blocks player input
✅ Integration with existing NLU/memory/policy layers

Enhanced NPC Intelligence:
- Player name awareness in all dialogues
- Conversation history tracking
- Relationship management
- Knowledge base for contextual responses
- Enhanced dialogue system with {playerName} placeholders

New Components:
- NPCBanterToggle: Player control over conversation visibility
- InterNPCDemo: Demonstration component with examples
- Comprehensive conversation state management

Integration Points:
- Room entry triggers automatic conversations
- Periodic conversation checks every 2 minutes
- Enhanced NPCConsole with intelligent responses
- Game state extended with conversation tracking

Files Added:
- src/types/dialogue.ts: Core conversation types
- src/npc/: Complete conversation system modules
- src/utils/: Enhanced NPC intelligence utilities
- src/components/: UI controls and demo components
- examples/: Complete usage examples
- INTER_NPC_CONVERSATIONS.md: Full documentation

This creates a living, dynamic NPC ecosystem where characters
coordinate hints, provide contextual responses, and maintain
rich conversational relationships while respecting game flow.

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "outputDirectory": "dist",
   "installCommand": "npm ci",
   "framework": null,
+  "alias": ["gorstan-game.vercel.app"],
   "headers": [
     {
       "source": "/(.*)",
