--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "eslint .",
     "test": "jest",
     "test:ui": "jest --watch",
+    "version:bump": "node scripts/bump-version.js",
+    "deploy:auto": "npm run version:bump && npm run build && git add . && git commit -m \"Deploy: bump version\" && git push",
     "e2e": "playwright test",
     "process-modules": "node scripts/process-modules.cjs",
     "add-headers": "node scripts/add-headers.cjs",
