--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "test:ui": "jest --watch",
     "version:bump": "node scripts/bump-version.js",
     "deploy:auto": "npm run version:bump && npm run build && git add . && git commit -m \"Deploy: bump version\" && git push",
+    "deploy:manual": "npm run build && vercel --prod",
+    "deploy:force": "npm run version:bump && npm run deploy:manual",
+    "verify:deployment": "node scripts/verify-deployment.js",
     "e2e": "playwright test",
     "process-modules": "node scripts/process-modules.cjs",
     "add-headers": "node scripts/add-headers.cjs",
