--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["react", "node", "jest"]
+    "types": ["react", "node", "jest"],
+    "typeRoots": ["./node_modules/@types", "./src/components"]
   },
   "include": ["src"]
 }
