--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,11 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "types": ["react", "node", "jest"],
-    "typeRoots": ["./node_modules/@types", "./src/components"]
+    "typeRoots": ["./node_modules/@types", "./src/components"],
+    "baseUrl": "./src",
+    "paths": {
+      "ui/*": ["ui/*"]
+    }
   },
   "include": ["src"]
 }
